--- a/src/styles/_scaffolding.scss
+++ b/src/styles/_scaffolding.scss
@@ -8,18 +8,78 @@ html {
 
 body {
   margin: auto;
-  text-align: center;
-  max-width: $page-width;
 }
 
-h1 {
-  margin: 0 0 2rem;
+ul {
+  list-style: none;
+  line-height: 2em;
+  li {
+    position: relative;
+    text-indent: 10px;
+    &::before {
+      content: '';
+      position: absolute;
+      left: -10px;
+      top: 0;
+      border-bottom: 2px solid olive;
+      width: 16px;
+      height: 1em;
+      border-bottom-left-radius: 15px;
+    }
+    &::after {
+      content: '';
+      position: absolute;
+      left: -10px;
+      bottom: 0;
+      border-left: 2px solid olive;
+      width: 8px;
+      height: 100%;
+    }
+    &:last-child {
+      &::after {
+        display: none;
+      }
+      &::before {
+        border-left: 2px solid olive;
+      }
+    }
+  }
 }
 
-.image {
-  display: inline-block;
-  height: 100px;
-  width: 100px;
-  background-image: url('~assets/example.png');
-  background-size: cover;
+.tree {
+  details {
+    &[open] {
+      > summary {
+        border-width: 0 0 2px 0;
+        border-style: solid;
+        border-color: olive;
+        border-bottom-left-radius: 15px;
+        &::before {
+          content: '-';
+        }
+      }
+    }
+  }
+  summary {
+    cursor: pointer;
+    display: inline-block;
+    &::marker {
+      display: none;
+    }
+    &::before {
+      position: absolute;
+      content: '+';
+      background: orange;
+      display: block;
+      width: 15px;
+      height: 15px;
+      border-radius: 50em;
+      left: -1.05em;
+      top: .5em;
+      z-index: 10;
+      text-align: center;
+      line-height: 12px;
+      text-indent: 0;
+    }
+  }
 }
