--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,5 @@
 $font-size: 1rem;
 $font-family: 'Inter', sans-serif;
-$background-color: #121212;
-$font-color: #dae0e0;
+$background-color: #ffffff;
+$font-color: #444;
 $page-width: 650px;
